<resources>
    <string name="app_name">e - wattoruwa</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">Good food is Good mood </string>
    <string name="deserts">Deserts</string>
    <string name="add_to_order">Add To Order</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="order_added">Order added</string>
    <string name="fruits">Fruits</string>
    <string name="fruit_juice">Fruit Juice</string>
    <string name="shorteats">Shorteats</string>
    <string name="drinks">Drinks</string>
    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="clear_orders">Clear Orders</string>
    <string name="place_order">Place Order</string>
    <string name="delivery">Delivery</string>
    <string name="back_to_order">Back to Order</string>
    <string name="send_order">Send Order</string>
    <string name="name">Name</string>
    <string name="place_to_deliver">Place to Deliver</string>
    <string name="contact_number">Contact number</string>
    <string name="total_price">Total price</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_contact">Contact numberr is invalid</string>
    <string name="delivery_report">Delivery Report</string>
    <string name="done">Done</string>
    <string name="thank_src">Your Order received. \n We will deliver your order \n on time to exact place \n you mentioned \n\n Thank you for being with us \n Keep in touch</string>
    <string name="hot_line">Hot line : 076 611 611 2, 011 254 520 9</string>
    <string name="about_us">About Us</string>
    <string name="about_button">About button</string>
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

</resources>
